--- a/1-8/style.css
+++ b/1-8/style.css
@@ -4,14 +4,14 @@
 } */
 
 /* カラーコード */
-.text {
-  /* color: #ff0000; */
-}
+/* .text {
+  color: #ff0000;
+} */
 
 /* RGB */
-.text {
-  /* color: rgb(255, 0, 0); */
-}
+/* .text {
+  color: rgb(255, 0, 0);
+} */
 
 /* RGBA */
 /* .text {
