--- a/2-2/desktop-first/style.css
+++ b/2-2/desktop-first/style.css
@@ -2,14 +2,14 @@ p {
   color: black;
 }
 
-/* 幅768px以下(iPad Miniなど) */
+/* タブレット縦以下 */
 @media screen and (max-width: 768px) {
   p {
     color: blue;
   }
 }
 
-/* 幅480px以下(iPhone XRなど) */
+/* スマートフォン横以下 */
 @media screen and (max-width: 480px) {
   p {
     color: red;
